# pt_job_queue

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.agents/skills/driver/: SKILL.md
.agents/skills/monitor/: SKILL.md
.pi/prompts/: driver.md  monitor.md
prompts/: adhoc.md  adhoc_torchtitan.md  investigate.md  investigate_torchtitan.md  rebase_conflict.md
ptq/: agent.py  agents.py  apply.py  cli.py  config.py  docker.py  issue.py  job.py  pr.py  provision.py  repo_profiles.py  results.py  ssh.py  takeover.py  workspace.py
ptq/application/: artifact_service.py  herdr_service.py  job_context.py  job_service.py  monitor_service.py  pr_service.py  rebase_service.py  run_service.py  supervisor_service.py  venv_service.py  worktree_service.py
ptq/domain/: models.py  policies.py
ptq/infrastructure/: backends.py  job_repository.py
ptq/web/: app.py  deps.py  routes.py
ptq/web/static/: style.css
ptq/web/templates/: base.html  dashboard.html  job_detail.html  job_launching.html  job_list.html  job_new.html  (+1 more)
scripts/: apply_to_site_pkgs.sh  rebuild.sh
skills/fix-review/: SKILL.md
skills/make-pr/: SKILL.md
skills/verify-fix/: SKILL.md
tests/: conftest.py  test_agent.py  test_agents.py  test_cli.py  test_config.py  test_docker.py  test_herdr_service.py  test_issue.py  test_job.py  test_monitor.py  test_pr.py  test_provision.py  test_rebase.py  test_repo_profiles.py  test_results.py  test_supervisor.py  test_torchtitan.py  test_torchtitan_launch.py  test_venv_clone.py  test_web.py  test_workspace.py  test_worktree.py
(+2 files in other folders)
