[project]
name = "ptq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["typer>=0.15.0", "rich>=13.0.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
ptq = "ptq.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
